--- a/app/src/main/res/layout/content_profile_edit_business_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_business_info.xml
@@ -141,6 +141,7 @@
                 android:layout_marginEnd="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@drawable/ripple_green_button"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/submit"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimaryDark"
@@ -160,6 +161,7 @@
                 android:background="@drawable/bg_grey_view"
                 android:text="@string/cancel"
                 android:textAllCaps="false"
+                android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorGrey"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
