--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,14 +32,14 @@
 
         <ImageView
             android:id="@+id/img_country"
-            android:contentDescription="@string/app_name"
             android:layout_width="@dimen/_18sdp"
             android:layout_height="@dimen/_18sdp"
+            android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView33"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_business_loan_icon" />
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/view_1"
@@ -67,6 +67,7 @@
             android:textCursorDrawable="@null"
             android:focusable="true"
             android:maxLines="1"
+            android:maxLength="15"
             android:textColorHint="@color/colorSemiWhite"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -133,6 +134,8 @@
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
             android:hint="@string/password"
+            android:maxLength="14"
+            android:maxLines="1"
             android:textColor="@color/colorSemiWhite"
             android:textColorHint="@color/colorSemiWhite"
             android:textSize="@dimen/_12sdp"
