--- a/app/src/main/res/layout/activity_lpk_savings.xml
+++ b/app/src/main/res/layout/activity_lpk_savings.xml
@@ -9,7 +9,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:elevation="0dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -21,8 +22,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/layout_tab_common"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    <include layout="@layout/content_lpk_savings" />
 
 
 </android.support.design.widget.CoordinatorLayout>
