--- a/app/src/main/res/layout/content_lpk_savings.xml
+++ b/app/src/main/res/layout/content_lpk_savings.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".lpk.view.LPKSavingsActivity"
-    tools:showIn="@layout/activity_lpksavings">
+    tools:showIn="@layout/activity_lpk_savings">
+
+    <include
+
+        layout="@layout/layout_tab_common"/>
 
 </android.support.constraint.ConstraintLayout>
