--- a/app/src/main/res/layout/fragment_transfer_history.xml
+++ b/app/src/main/res/layout/fragment_transfer_history.xml
@@ -14,7 +14,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rlList"
-        android:layout_marginEnd="@dimen/_3sdp"
+        android:layout_margin="@dimen/_3sdp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
