--- a/app/src/main/res/layout/layout_interest_history.xml
+++ b/app/src/main/res/layout/layout_interest_history.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     xmlns:android="http://schemas.android.com/apk/res/android" >
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_5sdp">
+        android:layout_margin="@dimen/_3sdp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
