--- a/app/src/main/res/layout/fragment_lpk.xml
+++ b/app/src/main/res/layout/fragment_lpk.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/screenBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardWithdrawal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/_3sdp"
@@ -97,11 +100,12 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardSavings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/_3sdp"
         android:layout_margin="@dimen/_7sdp"
-        android:id="@+id/cardSavings"
+
         >
 
         <android.support.constraint.ConstraintLayout
