--- a/app/src/main/res/layout/activity_lpk_savings.xml
+++ b/app/src/main/res/layout/activity_lpk_savings.xml
@@ -29,6 +29,8 @@
             android:src="@drawable/ic_filter"
             android:layout_marginEnd="@dimen/_12sdp"
             android:visibility="invisible"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:focusable="true"
 
             />
         </android.support.v7.widget.Toolbar>
