--- a/app/src/main/res/layout/layout_transfer_history.xml
+++ b/app/src/main/res/layout/layout_transfer_history.xml
@@ -54,11 +54,12 @@
 
             <com.app.l_pesa.common.CustomButtonRegular
                 android:id="@+id/buttonStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_29sdp"
+                android:layout_width="@dimen/_85sdp"
+                android:layout_height="@dimen/_28sdp"
                 android:textAllCaps="false"
                 android:textSize="@dimen/_10sdp"
                 android:textColor="@color/colorWhite"
+                android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
