--- a/app/src/main/res/layout/fragment_token_withdrawal.xml
+++ b/app/src/main/res/layout/fragment_token_withdrawal.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+ <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/rootLayout">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -73,11 +80,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView33">
 
                 <com.app.l_pesa.common.CommonEditTextRegular
+                    android:id="@+id/etToken"
+                    android:inputType="phone"
+                    android:maxLength="10"
+                    android:textSize="@dimen/_13sdp"
+                    android:longClickable="false"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:fontFamily="@font/montserrat"
-                    android:hint="@string/enter_token"
-                    android:textSize="@dimen/_11sdp" />
+                    android:hint="@string/enter_token" />
 
             </com.app.l_pesa.common.CommonInputLayout>
 
@@ -94,14 +104,14 @@
                 android:text="@string/minimum_withdrawal_amount"
                 android:textColor="@color/colorSemiBlack"
                 android:textSize="@dimen/_8sdp"
-                app:layout_constraintBottom_toTopOf="@+id/button2"
+                app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/commonInputLayout3" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/buttonSubmit"
                 android:layout_width="@dimen/_130sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/_12sdp"
@@ -123,3 +133,4 @@
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
