--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,8 +37,8 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="customInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-        <item name="boxStrokeColor">#7edBCF</item>
-        <item name="boxStrokeWidth">@dimen/_2sdp</item>
+        <item name="boxStrokeColor">@color/colorPrimaryLight</item>
+        <item name="boxStrokeWidth">@dimen/_1sdp</item>
     </style>
 
 
