--- a/app/src/main/res/drawable/ic_white_cross.xml
+++ b/app/src/main/res/drawable/ic_white_cross.xml
@@ -1,5 +1,6 @@
-<vector android:height="24dp" android:viewportHeight="48"
-    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M7.252,8.136l32.222,33.24c0.384,0.396 1.018,0.406 1.414,0.021c0.396,-0.384 0.406,-1.018 0.021,-1.414L8.688,6.745C8.303,6.348 7.67,6.338 7.274,6.723C6.877,7.107 6.867,7.74 7.252,8.136"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M39.474,6.745L7.252,39.983c-0.385,0.396 -0.375,1.03 0.022,1.414c0.396,0.385 1.029,0.375 1.414,-0.021l32.222,-33.24c0.385,-0.396 0.375,-1.029 -0.021,-1.414C40.491,6.338 39.857,6.348 39.474,6.745"/>
+<vector android:autoMirrored="true" android:height="24dp"
+    android:viewportHeight="48" android:viewportWidth="48"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M7.8,8.5l30.4,34.1c0.4,0.4 1,0.4 1.4,0.1c0.4,-0.4 0.4,-1 0.1,-1.4L9.2,7.2c-0.4,-0.4 -1,-0.4 -1.4,-0.1C7.4,7.5 7.4,8.1 7.8,8.5"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M38.2,7.2L7.8,41.3c-0.4,0.4 -0.3,1 0.1,1.4c0.4,0.4 1,0.3 1.4,-0.1L39.7,8.5c0.4,-0.4 0.3,-1 -0.1,-1.4C39.2,6.8 38.6,6.8 38.2,7.2"/>
 </vector>
