--- a/app/src/main/res/layout/layout_filter_by_date_amount.xml
+++ b/app/src/main/res/layout/layout_filter_by_date_amount.xml
@@ -38,7 +38,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+                    app:srcCompat="@drawable/ic_white_cross" />
 
                 <TextView
                     android:id="@+id/txtFilter"
@@ -62,7 +62,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5sdp">
 
-            <android.support.constraint.ConstraintLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+
+                 <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="@dimen/_7sdp">
@@ -71,7 +77,6 @@
                     android:id="@+id/commonInputLayout19"
                     style="@style/customInputLayoutStyle"
                     android:layout_width="0dp"
-                    app:layout_constraintBottom_toTopOf="@+id/buttonFilterSubmit"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_10sdp"
                     app:layout_constraintEnd_toStartOf="@+id/commonInputLayout18"
@@ -122,22 +127,85 @@
 
                 </com.app.l_pesa.common.CommonInputLayout>
 
-                <com.app.l_pesa.common.CustomButtonRegular
-                    android:id="@+id/buttonFilterSubmit"
-                    android:layout_width="@dimen/_120sdp"
-                    android:layout_height="@dimen/_30sdp"
-                    android:background="@drawable/ripple_green_button"
-                    android:text="@string/search"
-                    android:textAllCaps="false"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/commonInputLayout19"
-                    android:textColor="@color/colorPrimaryDark"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
 
 
             </android.support.constraint.ConstraintLayout>
+
+                   <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/_7sdp">
+
+                    <com.app.l_pesa.common.CommonInputLayout
+                        android:id="@+id/commonInputLayout20"
+                        style="@style/customInputLayoutStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        app:layout_constraintEnd_toStartOf="@+id/commonInputLayout21"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <com.app.l_pesa.common.CommonEditTextRegular
+                            android:id="@+id/etFromAmount"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:hint="@string/from_amount"
+                            android:textColor="@color/textColors"
+                            android:textSize="@dimen/_12sdp"
+                            app:fontFamily="@font/montserrat"
+                            android:cursorVisible="false"
+                            android:inputType="numberDecimal"
+                            android:maxLength="6"
+                            />
+
+                    </com.app.l_pesa.common.CommonInputLayout>
+
+                    <com.app.l_pesa.common.CommonInputLayout
+                        android:id="@+id/commonInputLayout21"
+                        style="@style/customInputLayoutStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toEndOf="@+id/commonInputLayout20"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <com.app.l_pesa.common.CommonEditTextRegular
+                            android:id="@+id/etToAmount"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:hint="@string/to_amount"
+                            android:textColor="@color/textColors"
+                            android:textSize="@dimen/_12sdp"
+                            app:fontFamily="@font/montserrat"
+                            android:cursorVisible="false"
+                            android:inputType="numberDecimal"
+                            android:maxLength="6"/>
+
+
+                    </com.app.l_pesa.common.CommonInputLayout>
+
+                       <com.app.l_pesa.common.CustomButtonRegular
+                           android:id="@+id/buttonFilterSubmit"
+                           android:layout_width="@dimen/_120sdp"
+                           android:layout_height="@dimen/_30sdp"
+                           android:background="@drawable/ripple_green_button"
+                           android:text="@string/search"
+                           android:textAllCaps="false"
+                           android:layout_marginTop="@dimen/_20sdp"
+                           app:layout_constraintTop_toBottomOf="@+id/commonInputLayout21"
+                           android:textColor="@color/colorPrimaryDark"
+                           app:layout_constraintBottom_toBottomOf="parent"
+                           app:layout_constraintEnd_toEndOf="parent"
+                           app:layout_constraintStart_toStartOf="parent" />
+
+                </android.support.constraint.ConstraintLayout>
+
+            </LinearLayout>
+
+
 
         </android.support.v7.widget.CardView>
 
