--- a/app/src/main/res/layout/layout_filter_by_date_amount.xml
+++ b/app/src/main/res/layout/layout_filter_by_date_amount.xml
@@ -52,6 +52,20 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imgCancel"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <com.app.l_pesa.common.CustomButtonRegular
+                    android:id="@+id/buttonReset"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_25sdp"
+                    android:background="@drawable/bg_transparent_border_white_view"
+                    android:text="@string/reset"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorWhite"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.95"
+                    app:layout_constraintStart_toEndOf="@+id/txtFilter"
+                    app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
 
@@ -77,7 +91,7 @@
                     android:id="@+id/commonInputLayout19"
                     style="@style/customInputLayoutStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_40sdp"
                     android:layout_marginEnd="@dimen/_10sdp"
                     app:layout_constraintEnd_toStartOf="@+id/commonInputLayout18"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -103,8 +117,8 @@
                 <com.app.l_pesa.common.CommonInputLayout
                     android:id="@+id/commonInputLayout18"
                     style="@style/customInputLayoutStyle"
+                    android:layout_height="@dimen/_40sdp"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/commonInputLayout19"
@@ -140,7 +154,7 @@
                         android:id="@+id/commonInputLayout20"
                         style="@style/customInputLayoutStyle"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/_40sdp"
                         android:layout_marginEnd="@dimen/_10sdp"
                         app:layout_constraintEnd_toStartOf="@+id/commonInputLayout21"
                         app:layout_constraintHorizontal_bias="0.5"
@@ -156,7 +170,7 @@
                             android:textSize="@dimen/_12sdp"
                             app:fontFamily="@font/montserrat"
                             android:cursorVisible="false"
-                            android:inputType="numberDecimal"
+                            android:inputType="numberSigned"
                             android:maxLength="6"
                             />
 
@@ -166,7 +180,7 @@
                         android:id="@+id/commonInputLayout21"
                         style="@style/customInputLayoutStyle"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/_40sdp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toEndOf="@+id/commonInputLayout20"
@@ -181,7 +195,7 @@
                             android:textSize="@dimen/_12sdp"
                             app:fontFamily="@font/montserrat"
                             android:cursorVisible="false"
-                            android:inputType="numberDecimal"
+                            android:inputType="numberSigned"
                             android:maxLength="6"/>
 
 
