--- a/app/src/main/res/layout/layout_filter_by_date_amount.xml
+++ b/app/src/main/res/layout/layout_filter_by_date_amount.xml
@@ -38,7 +38,9 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_white_cross" />
+                    app:srcCompat="@drawable/ic_white_cross"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:focusable="true"/>
 
                 <TextView
                     android:id="@+id/txtFilter"
