--- a/app/src/main/res/layout/layout_filter_by_date.xml
+++ b/app/src/main/res/layout/layout_filter_by_date.xml
@@ -38,7 +38,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_white_cross" />
+                    app:srcCompat="@drawable/ic_white_cross"
+                    android:background="?attr/selectableItemBackgroundBorderless"/>
 
                 <TextView
                     android:id="@+id/txtFilter"
@@ -51,6 +52,20 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imgCancel"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.app.l_pesa.common.CustomButtonRegular
+                    android:id="@+id/buttonReset"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_25sdp"
+                    android:background="@drawable/bg_transparent_border_white_view"
+                    android:text="@string/reset"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorWhite"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.95"
+                    app:layout_constraintStart_toEndOf="@+id/txtFilter"
                     app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
@@ -65,14 +80,16 @@
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="@dimen/_7sdp">
+                android:paddingStart="@dimen/_7sdp"
+                android:paddingEnd="@dimen/_7sdp"
+                android:paddingBottom="@dimen/_7sdp">
 
                 <com.app.l_pesa.common.CommonInputLayout
                     android:id="@+id/commonInputLayout19"
                     style="@style/customInputLayoutStyle"
                     android:layout_width="0dp"
                     app:layout_constraintBottom_toTopOf="@+id/buttonFilterSubmit"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_40sdp"
                     android:layout_marginEnd="@dimen/_10sdp"
                     app:layout_constraintEnd_toStartOf="@+id/commonInputLayout18"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -99,7 +116,7 @@
                     android:id="@+id/commonInputLayout18"
                     style="@style/customInputLayoutStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_40sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/commonInputLayout19"
