--- a/app/src/main/res/layout/layout_transfer_history.xml
+++ b/app/src/main/res/layout/layout_transfer_history.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/txtToken"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/dark_text_color"
                 android:textSize="@dimen/_12sdp"
@@ -30,13 +30,13 @@
                 android:id="@+id/txtCreateDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_7sdp"
+                android:layout_marginTop="@dimen/_3sdp"
                 android:drawableStart="@drawable/ic_request_date"
                 android:drawablePadding="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/light_text_color"
                 android:textSize="@dimen/_10sdp"
-                android:gravity="center"
+                android:gravity="center|start"
                 app:layout_constraintBottom_toTopOf="@+id/txtRef"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtToken" />
