--- a/app/src/main/res/layout/fragment_wallet_address.xml
+++ b/app/src/main/res/layout/fragment_wallet_address.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/screenBackground">
@@ -79,12 +86,13 @@
                 android:layout_marginLeft="@dimen/_15sdp"
                 android:layout_marginTop="@dimen/_23sdp"
                 android:layout_marginRight="@dimen/_15sdp"
-                app:layout_constraintBottom_toTopOf="@id/button"
+                app:layout_constraintBottom_toTopOf="@id/buttonWalletAddress"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView31">
 
                 <com.app.l_pesa.common.CommonEditTextRegular
+                    android:id="@+id/etWalletAddress"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
@@ -94,7 +102,7 @@
             </com.app.l_pesa.common.CommonInputLayout>
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/buttonWalletAddress"
                 android:layout_width="@dimen/_130sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/_14sdp"
@@ -116,3 +124,4 @@
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
