--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -59,11 +59,12 @@
 
             <com.app.l_pesa.common.CustomButtonRegular
                 android:id="@+id/buttonStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_22sdp"
-                android:padding="@dimen/_5sdp"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_27sdp"
+                android:padding="@dimen/_3sdp"
                 android:textAllCaps="false"
-                android:textSize="@dimen/_8sdp"
+                android:textSize="@dimen/_10sdp"
+                android:text="@string/ether_scan_url"
                 android:textColor="@color/colorSemiWhite"
                 android:background="@drawable/blue_button"
                 app:layout_constraintBottom_toBottomOf="parent"
