--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -38,7 +38,7 @@
                 android:drawablePadding="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
                 android:gravity="start|center"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_11sdp"
                 android:textColor="@color/light_text_color"
                 app:layout_constraintBottom_toTopOf="@+id/txtStatus"
                 app:layout_constraintEnd_toStartOf="@+id/view46"
@@ -49,11 +49,12 @@
                 android:id="@+id/txtStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:textSize="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_1sdp"
+                android:drawablePadding="@dimen/_5sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/light_text_color"
-                app:layout_constraintBottom_toTopOf="@+id/textView85"
+                app:layout_constraintBottom_toTopOf="@+id/txtReason"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtCreateDate" />
 
@@ -72,12 +73,12 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView85"
+                android:id="@+id/txtReason"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_5sdp"
-                android:textSize="@dimen/_9sdp"
-                android:text=""
+                android:layout_marginEnd="@dimen/_3sdp"
+                android:textSize="@dimen/_10sdp"
                 android:textColor="@color/dark_text_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/view46"
