--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -50,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/_11sdp"
+                android:gravity="start|center"
                 android:layout_marginTop="@dimen/_1sdp"
                 android:drawablePadding="@dimen/_5sdp"
                 android:fontFamily="@font/montserrat"
